chore(docker): 优化部署配置和健康检查
- 添加 curl 支持 API 健康检查
- 优化 docker-compose 健康检查和日志配置
- 添加端口可配置和资源限制
- 新增 deploy.ps1 部署脚本
- 新增数据库初始化脚本 init.sh
- 更新 .env.docker.example 示例配置

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -1,18 +1,40 @@
 # ===========================================
-# Docker Compose 环境变量配置
+# Sakura Blog - 环境变量配置
 # ===========================================
 # 复制此文件为 .env 并修改配置
 # cp .env.docker.example .env
 # ===========================================
 
+# ==========================================
+# 端口配置（如有端口冲突可修改）
+# ==========================================
+MYSQL_PORT=3306
+REDIS_PORT=6379
+API_PORT=8080
+ADMIN_PORT=3000
+BLOG_PORT=3001
+
+# ==========================================
 # MySQL 配置
+# ==========================================
 MYSQL_ROOT_PASSWORD=root123
 
-# JWT 密钥（生产环境请修改为随机生成的密钥）
-JWT_SECRET=your-256-bit-secret-key-for-jwt-token-generation-must-be-long-enough
+# ==========================================
+# JWT 密钥（生产环境必须修改！）
+# 要求：至少 32 字符（256 bits）
+# 生成方法: openssl rand -base64 32
+# ==========================================
+JWT_SECRET=sakura-blog-jwt-secret-key-2024-must-be-at-least-256-bits-long
 
-# Session 密钥（生产环境请修改为随机生成的密钥）
+# ==========================================
+# Session 密钥（生产环境必须修改！）
+# 生成方法: openssl rand -base64 32
+# ==========================================
 SESSION_SECRET=sakura-blog-admin-secret-key-2025-very-secure
 
-# API 地址（生产环境请修改为实际域名）
+# ==========================================
+# API 公开访问地址
+# 生产环境请修改为实际域名
+# 例如: https://api.example.com
+# ==========================================
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8080
